# sagemaker-training-job-wandb-samples

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 1.ml-training-at-local.ipynb  1.training_at_local.ipynb
notebooks/2.sagemaker-training/: 2.sagemaker-training.ipynb  2.training-at-SageMaker-Training-Job.ipynb  sample-secret.json
notebooks/2.sagemaker-training/code/: train.py
notebooks/2.sagemaker-training/docker/: Dockerfile  build_and_push.sh
notebooks/2.sagemaker-training/scripts/: utils.py
notebooks/2.sagemaker-training/src/: requirements.txt  train.py
