[project]
name = "sagemaker-training-job-wandb-samples"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "lightning>=2.5.3",
    "nbformat>=5.10.4",
    "python-dotenv>=1.1.1",
    "sagemaker>=2.251.0",
    "torchvision>=0.23.0",
    "wandb>=0.21.1",
]
